# DIVINA-Recommender

./: IMPLEMENTATION.md  README.md  demo_library.py  main.py  pyproject.toml
src/divina_recommender/: __init__.py  diver_skill.py  engine.py  models.py
src/divina_recommender/models/: dive_shop.py
